fix & test flush in jdk.internal.io.JdkConsoleImpl
spawn $java $opt1 $opt2 $opt3 looks ugly and repetitive, but I don't
know how to pass variable number of options better and I have no time
to figure it out